--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -638,37 +638,163 @@ base_kops = [
         's': {'exts': {
             # TODO(rg): These actually use $(SGEMM_UNROLL_M) to choose the size
             '_iunucopy': {'dir': 'generic', 'kernel': 'trmm_uncopy_8.c',
-                          'addl': ['-UOUTER', '-ULOWER', '-DUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER', '-DUNIT']},
             '_iunncopy': {'dir': 'generic', 'kernel': 'trmm_uncopy_8.c',
-                          'addl': ['-UOUTER', '-ULOWER', '-UUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER', '-UUNIT']},
             '_ilnucopy': {'dir': 'generic', 'kernel': 'trmm_lncopy_8.c',
-                          'addl': ['-UOUTER', '-DLOWER', '-DUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER', '-DUNIT']},
             '_ilnncopy': {'dir': 'generic', 'kernel': 'trmm_lncopy_8.c',
-                          'addl': ['-UOUTER', '-DLOWER', '-UUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER', '-UUNIT']},
             '_iutucopy': {'dir': 'generic', 'kernel': 'trmm_utcopy_8.c',
-                          'addl': ['-UOUTER', '-ULOWER', '-DUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER', '-DUNIT']},
             '_iutncopy': {'dir': 'generic', 'kernel': 'trmm_utcopy_8.c',
-                          'addl': ['-UOUTER', '-ULOWER', '-UUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER', '-UUNIT']},
             '_iltucopy': {'dir': 'generic', 'kernel': 'trmm_ltcopy_8.c',
-                          'addl': ['-UOUTER', '-DLOWER', '-DUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER', '-DUNIT']},
             '_iltncopy': {'dir': 'generic', 'kernel': 'trmm_ltcopy_8.c',
-                          'addl': ['-UOUTER', '-DLOWER', '-UUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER', '-UUNIT']},
             '_ounucopy': {'dir': 'generic', 'kernel': 'trmm_uncopy_4.c',
-                          'addl': ['-DOUTER', '-ULOWER', '-DUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER', '-DUNIT']},
             '_ounncopy': {'dir': 'generic', 'kernel': 'trmm_uncopy_4.c',
-                          'addl': ['-DOUTER', '-ULOWER', '-UUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER', '-UUNIT']},
             '_olnucopy': {'dir': 'generic', 'kernel': 'trmm_lncopy_4.c',
-                          'addl': ['-DOUTER', '-DLOWER', '-DUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER', '-DUNIT']},
             '_olnncopy': {'dir': 'generic', 'kernel': 'trmm_lncopy_4.c',
-                          'addl': ['-DOUTER', '-DLOWER', '-UUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER', '-UUNIT']},
             '_outucopy': {'dir': 'generic', 'kernel': 'trmm_utcopy_4.c',
-                          'addl': ['-DOUTER', '-ULOWER', '-DUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER', '-DUNIT']},
             '_outncopy': {'dir': 'generic', 'kernel': 'trmm_utcopy_4.c',
-                          'addl': ['-DOUTER', '-ULOWER', '-UUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER', '-UUNIT']},
             '_oltucopy': {'dir': 'generic', 'kernel': 'trmm_ltcopy_4.c',
-                          'addl': ['-DOUTER', '-DLOWER', '-DUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER', '-DUNIT']},
             '_oltncopy': {'dir': 'generic', 'kernel': 'trmm_ltcopy_4.c',
-                          'addl': ['-DOUTER', '-DLOWER', '-UUNIT']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER', '-UUNIT']},
+        }},
+        'd': {'exts': {
+            '_iunucopy': {'dir': 'generic', 'kernel': 'trmm_uncopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER', '-DUNIT']},
+            '_iunncopy': {'dir': 'generic', 'kernel': 'trmm_uncopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER', '-UUNIT']},
+            '_ilnucopy': {'dir': 'generic', 'kernel': 'trmm_lncopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER', '-DUNIT']},
+            '_ilnncopy': {'dir': 'generic', 'kernel': 'trmm_lncopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER', '-UUNIT']},
+            '_iutucopy': {'dir': 'generic', 'kernel': 'trmm_utcopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER', '-DUNIT']},
+            '_iutncopy': {'dir': 'generic', 'kernel': 'trmm_utcopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER', '-UUNIT']},
+            '_iltucopy': {'dir': 'generic', 'kernel': 'trmm_ltcopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER', '-DUNIT']},
+            '_iltncopy': {'dir': 'generic', 'kernel': 'trmm_ltcopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER', '-UUNIT']},
+            '_ounucopy': {'dir': 'generic', 'kernel': 'trmm_uncopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER', '-DUNIT']},
+            '_ounncopy': {'dir': 'generic', 'kernel': 'trmm_uncopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER', '-UUNIT']},
+            '_olnucopy': {'dir': 'generic', 'kernel': 'trmm_lncopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER', '-DUNIT']},
+            '_olnncopy': {'dir': 'generic', 'kernel': 'trmm_lncopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER', '-UUNIT']},
+            '_outucopy': {'dir': 'generic', 'kernel': 'trmm_utcopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER', '-DUNIT']},
+            '_outncopy': {'dir': 'generic', 'kernel': 'trmm_utcopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER', '-UUNIT']},
+            '_oltucopy': {'dir': 'generic', 'kernel': 'trmm_ltcopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER', '-DUNIT']},
+            '_oltncopy': {'dir': 'generic', 'kernel': 'trmm_ltcopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER', '-UUNIT']},
+        }},
+        'c': {'exts': {
+            '_iunucopy': {'dir': 'generic', 'kernel': 'ztrmm_uncopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER', '-DUNIT']},
+            '_iunncopy': {'dir': 'generic', 'kernel': 'ztrmm_uncopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER', '-UUNIT']},
+            '_ilnucopy': {'dir': 'generic', 'kernel': 'ztrmm_lncopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER', '-DUNIT']},
+            '_ilnncopy': {'dir': 'generic', 'kernel': 'ztrmm_lncopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER', '-UUNIT']},
+            '_iutucopy': {'dir': 'generic', 'kernel': 'ztrmm_utcopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER', '-DUNIT']},
+            '_iutncopy': {'dir': 'generic', 'kernel': 'ztrmm_utcopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER', '-UUNIT']},
+            '_iltucopy': {'dir': 'generic', 'kernel': 'ztrmm_ltcopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER', '-DUNIT']},
+            '_iltncopy': {'dir': 'generic', 'kernel': 'ztrmm_ltcopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER', '-UUNIT']},
+            '_ounucopy': {'dir': 'generic', 'kernel': 'ztrmm_uncopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER', '-DUNIT']},
+            '_ounncopy': {'dir': 'generic', 'kernel': 'ztrmm_uncopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER', '-UUNIT']},
+            '_olnucopy': {'dir': 'generic', 'kernel': 'ztrmm_lncopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER', '-DUNIT']},
+            '_olnncopy': {'dir': 'generic', 'kernel': 'ztrmm_lncopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER', '-UUNIT']},
+            '_outucopy': {'dir': 'generic', 'kernel': 'ztrmm_utcopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER', '-DUNIT']},
+            '_outncopy': {'dir': 'generic', 'kernel': 'ztrmm_utcopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER', '-UUNIT']},
+            '_oltucopy': {'dir': 'generic', 'kernel': 'ztrmm_ltcopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER', '-DUNIT']},
+            '_oltncopy': {'dir': 'generic', 'kernel': 'ztrmm_ltcopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER', '-UUNIT']},
+        }},
+        'z': {'exts': {
+            '_iunucopy': {'dir': 'generic', 'kernel': 'ztrmm_uncopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER', '-DUNIT']},
+            '_iunncopy': {'dir': 'generic', 'kernel': 'ztrmm_uncopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER', '-UUNIT']},
+            '_ilnucopy': {'dir': 'generic', 'kernel': 'ztrmm_lncopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER', '-DUNIT']},
+            '_ilnncopy': {'dir': 'generic', 'kernel': 'ztrmm_lncopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER', '-UUNIT']},
+            '_iutucopy': {'dir': 'generic', 'kernel': 'ztrmm_utcopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER', '-DUNIT']},
+            '_iutncopy': {'dir': 'generic', 'kernel': 'ztrmm_utcopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER', '-UUNIT']},
+            '_iltucopy': {'dir': 'generic', 'kernel': 'ztrmm_ltcopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER', '-DUNIT']},
+            '_iltncopy': {'dir': 'generic', 'kernel': 'ztrmm_ltcopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER', '-UUNIT']},
+            '_ounucopy': {'dir': 'generic', 'kernel': 'ztrmm_uncopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER', '-DUNIT']},
+            '_ounncopy': {'dir': 'generic', 'kernel': 'ztrmm_uncopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER', '-UUNIT']},
+            '_olnucopy': {'dir': 'generic', 'kernel': 'ztrmm_lncopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER', '-DUNIT']},
+            '_olnncopy': {'dir': 'generic', 'kernel': 'ztrmm_lncopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER', '-UUNIT']},
+            '_outucopy': {'dir': 'generic', 'kernel': 'ztrmm_utcopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER', '-DUNIT']},
+            '_outncopy': {'dir': 'generic', 'kernel': 'ztrmm_utcopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER', '-UUNIT']},
+            '_oltucopy': {'dir': 'generic', 'kernel': 'ztrmm_ltcopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER', '-DUNIT']},
+            '_oltncopy': {'dir': 'generic', 'kernel': 'ztrmm_ltcopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER', '-UUNIT']},
+        }},
+    },
+  },
+  { 'base': '?hemm',
+    'modes': {
+        'c': {'exts': {
+            '_iutcopy': {'dir': 'generic', 'kernel': 'zhemm_utcopy_4.c',
+                         'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER']},
+            '_iltcopy': {'dir': 'generic', 'kernel': 'zhemm_utcopy_4.c',
+                         'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER']},
+            '_outcopy': {'dir': 'generic', 'kernel': 'zhemm_utcopy_4.c',
+                         'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER']},
+            '_oltcopy': {'dir': 'generic', 'kernel': 'zhemm_utcopy_4.c',
+                         'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER']},
+        }},
+        'z': {'exts': {
+            '_iutcopy': {'dir': 'generic', 'kernel': 'zhemm_utcopy_4.c',
+                         'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER']},
+            '_iltcopy': {'dir': 'generic', 'kernel': 'zhemm_utcopy_4.c',
+                         'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER']},
+            '_outcopy': {'dir': 'generic', 'kernel': 'zhemm_utcopy_4.c',
+                         'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER']},
+            '_oltcopy': {'dir': 'generic', 'kernel': 'zhemm_utcopy_4.c',
+                         'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER']},
         }},
     },
   },
@@ -856,13 +982,43 @@ base_kops = [
         's': {'exts': {
             # TODO(rg): These actually use $(SGEMM_UNROLL_M) to choose the size
             '_iutcopy': {'dir': 'generic', 'kernel': 'symm_ucopy_8.c',
-                          'addl': ['-UOUTER', '-ULOWER']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER']},
             '_iltcopy': {'dir': 'generic', 'kernel': 'symm_lcopy_8.c',
-                          'addl': ['-UOUTER', '-DLOWER']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER']},
             '_outcopy': {'dir': 'generic', 'kernel': 'symm_ucopy_4.c',
-                          'addl': ['-DOUTER', '-ULOWER']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER']},
             '_oltcopy': {'dir': 'generic', 'kernel': 'symm_lcopy_4.c',
-                          'addl': ['-DOUTER', '-DLOWER']},
+                          'addl': ['-UDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER']},
+        }},
+        'd': {'exts': {
+            '_iutcopy': {'dir': 'generic', 'kernel': 'symm_ucopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-ULOWER']},
+            '_iltcopy': {'dir': 'generic', 'kernel': 'symm_lcopy_8.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-UOUTER', '-DLOWER']},
+            '_outcopy': {'dir': 'generic', 'kernel': 'symm_ucopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-ULOWER']},
+            '_oltcopy': {'dir': 'generic', 'kernel': 'symm_lcopy_4.c',
+                          'addl': ['-DDOUBLE', '-UCOMPLEX', '-DOUTER', '-DLOWER']},
+        }},
+        'c': {'exts': {
+            '_iutcopy': {'dir': 'generic', 'kernel': 'zsymm_ucopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER']},
+            '_iltcopy': {'dir': 'generic', 'kernel': 'zsymm_lcopy_8.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER']},
+            '_outcopy': {'dir': 'generic', 'kernel': 'zsymm_ucopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER']},
+            '_oltcopy': {'dir': 'generic', 'kernel': 'zsymm_lcopy_4.c',
+                          'addl': ['-UDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER']},
+        }},
+        'z': {'exts': {
+            '_iutcopy': {'dir': 'generic', 'kernel': 'zsymm_ucopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-ULOWER']},
+            '_iltcopy': {'dir': 'generic', 'kernel': 'zsymm_lcopy_8.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-UOUTER', '-DLOWER']},
+            '_outcopy': {'dir': 'generic', 'kernel': 'zsymm_ucopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-ULOWER']},
+            '_oltcopy': {'dir': 'generic', 'kernel': 'zsymm_lcopy_4.c',
+                          'addl': ['-DDOUBLE', '-DCOMPLEX', '-DOUTER', '-DLOWER']},
         }},
     },
   },
