BLD: `ctest` port

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -385,16 +385,22 @@ base_kops = [
   },
   { 'base': '?geru',
     'modes': {
-        'c': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c'}}},
-        'z': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c'}}},
+        'c': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c', 'addl': ['-UDOUBLE', '-DCOMPLEX', '-UCONJ']}}},
+        'z': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c', 'addl': ['-DDOUBLE', '-DCOMPLEX', '-UCONJ']}}},
         # 'x': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c'}}},
     },
   },
   { 'base': '?gerc',
     'modes': {
-        'c': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c'}}},
-        'z': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c'}}},
+        'c': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c', 'addl': ['-UDOUBLE', '-DCOMPLEX', '-DCONJ']}}},
+        'z': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c', 'addl': ['-DDOUBLE', '-DCOMPLEX', '-DCONJ']}}},
         # 'x': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c'}}},
+    },
+  },
+  { 'base': '?gerv',
+    'modes': {
+        'c': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c', 'addl': ['-UDOUBLE', '-DCOMPLEX', '-UCONJ', '-DXCONJ']}}},
+        'z': {'exts': {'_k': {'dir': 'generic', 'kernel': 'zger.c', 'addl': ['-DDOUBLE', '-DCOMPLEX', '-UCONJ', '-DXCONJ']}}},
     },
   },
   { 'base': '?hemv',
