--- a/interface/meson.build
+++ b/interface/meson.build
@@ -565,6 +565,9 @@ foreach conf : _blas_roots
     endif
     # Seed with common args
     compiler_args = _cargs + interface_args
+    if fc_id == 'gcc'
+      compiler_args += ['-DF_INTERFACE_GFORT']
+    endif
     # Generate the symbol flags
     base = conf['base']
     if symb_defs.has_key(base)
