--- a/utest/meson.build
+++ b/utest/meson.build
@@ -104,7 +104,8 @@ openblas_utest_ext_exec = executable(
     # `common.h` from the source root, not `utest/test_extensions` directory
     # one. Also, `config.h` is needed that lives in the build directory.
     implicit_include_directories: false,
-    c_args: _cargs + ['-I..', '-I../build'],
+    include_directories: _inc,
+    c_args: _cargs + [f'-I@global_bld_dir@'],
 )
 
 test('openblas_utest_tests', openblas_utest_exec)
