MAINT: Use project local directories

--- a/meson.build
+++ b/meson.build
@@ -24,7 +24,8 @@ cc = meson.get_compiler('c')
 fc = meson.get_compiler('fortran')
 cc_id = cc.get_id()
 fc_id = fc.get_id()
-global_bld_dir = meson.global_build_root()
+prj_bld_dir = meson.project_build_root()
+prj_src_dir = meson.project_source_root()
 
 # Common args
 _args = []
