--- a/driver/level2/meson.build
+++ b/driver/level2/meson.build
@@ -513,8 +513,8 @@ foreach _kop : driver_kops
 
         # Add standard flags for naming conventions
         _ext_cargs += [
-          f'-DASMNAME=@sym_name@',
-          f'-DASMFNAME=@sym_underscored@',
+          f'-DASMNAME=@asm_name_prefix@@sym_name@',
+          f'-DASMFNAME=@asm_name_prefix@@sym_underscored@',
           f'-DNAME=@sym_underscored@',
           f'-DCNAME=@sym_name@',
           f'-DCHAR_NAME="@sym_underscored@"',
